--- a/ArchFinal/ArchFinal/ArchFinal.csproj
+++ b/ArchFinal/ArchFinal/ArchFinal.csproj
@@ -46,12 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbsHouseParts.cs" />
     <Compile Include="Builder.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Builder.Designer.cs">
       <DependentUpon>Builder.cs</DependentUpon>
     </Compile>
+    <Compile Include="Composite.cs" />
+    <Compile Include="Door.cs" />
+    <Compile Include="Floor.cs" />
+    <Compile Include="Foundation.cs" />
     <Compile Include="Home.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,8 +69,16 @@
     <Compile Include="Editor.Designer.cs">
       <DependentUpon>Editor.cs</DependentUpon>
     </Compile>
+    <Compile Include="House.cs" />
+    <Compile Include="HouseIF.cs" />
+    <Compile Include="HousePartsIF.cs" />
+    <Compile Include="Paint.cs" />
+    <Compile Include="PaintAndWindow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Roof.cs" />
+    <Compile Include="Siding.cs" />
+    <Compile Include="Window.cs" />
     <EmbeddedResource Include="Builder.resx">
       <DependentUpon>Builder.cs</DependentUpon>
     </EmbeddedResource>
