--- a/ArchFinal/ArchFinal/ArchFinal.csproj
+++ b/ArchFinal/ArchFinal/ArchFinal.csproj
@@ -53,7 +53,11 @@
     <Compile Include="Builder.Designer.cs">
       <DependentUpon>Builder.cs</DependentUpon>
     </Compile>
+    <Compile Include="City.cs" />
     <Compile Include="Composite.cs" />
+    <Compile Include="Country.cs" />
+    <Compile Include="Decorator.cs" />
+    <Compile Include="Desert.cs" />
     <Compile Include="Door.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="Foundation.cs" />
@@ -72,12 +76,18 @@
     <Compile Include="House.cs" />
     <Compile Include="HouseIF.cs" />
     <Compile Include="HousePartsIF.cs" />
+    <Compile Include="Location.cs" />
+    <Compile Include="LocationFactory.cs" />
+    <Compile Include="LocationIF.cs" />
+    <Compile Include="Oceanside.cs" />
     <Compile Include="Paint.cs" />
     <Compile Include="PaintAndWindow.cs" />
+    <Compile Include="PrivateIsland.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roof.cs" />
     <Compile Include="Siding.cs" />
+    <Compile Include="Suburb.cs" />
     <Compile Include="Window.cs" />
     <EmbeddedResource Include="Builder.resx">
       <DependentUpon>Builder.cs</DependentUpon>
